<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/loginHomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activityVerticalMargin"
    android:paddingLeft="@dimen/activityHorizontalMargin"
    android:paddingRight="@dimen/activityHorizontalMargin"
    android:paddingTop="@dimen/activityVerticalMargin"
    tools:context="com.pratyushnalam.nirvanapass.LoginActivity">

    <LinearLayout
        android:id="@id/loginHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@id/loginHeaderLogoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@id/loginLogoImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/componentMargin"
                android:src="@drawable/logo" />

            <TextView
                android:id="@id/loginTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/componentMargin"
                android:gravity="center_vertical"
                android:text="@string/appName"
                android:textColor="@android:color/primary_text_light"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@id/loginSloganTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/slogan"
            android:textColor="@android:color/primary_text_light"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/loginFormLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@id/loginNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@id/loginNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/componentMargin"
                android:hint="@string/loginName"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@id/loginPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/componentMargin"
                android:hint="@string/loginPassword"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@id/loginSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/componentMargin"
            android:text="@string/loginSubmit" />
    </LinearLayout>
</LinearLayout>
