<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/passwordHomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activityVerticalMargin"
    android:paddingLeft="@dimen/activityHorizontalMargin"
    android:paddingRight="@dimen/activityHorizontalMargin"
    android:paddingTop="@dimen/activityVerticalMargin"
    tools:context="com.nirvanapass.PasswordActivity">

    <include layout="@layout/header_layout" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="60dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@id/passwordWebsiteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@id/passwordWebsiteEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/componentMargin"
            android:hint="@string/passwordWebsite"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@id/passwordIterationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@id/passwordIterationEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/componentMargin"
            android:hint="@string/passwordIteration"
            android:imeOptions="actionGo"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@id/passwordSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/componentMargin"
        android:text="@string/passwordSubmit" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <LinearLayout
        android:id="@id/passwordGenerateLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@id/passwordGenerateTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="" />

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <Button
            android:id="@id/passwordCopyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordCopy"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>

